--- a/cakeproject/index.html
+++ b/cakeproject/index.html
@@ -1,22 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<!--idioma-->
+<!--inicio head-->
 
 <head>
     <meta charset="utf-8">
+    <!--Responsive meta tag-->
+    <meta charset="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
+    <!--especifico donde está archivo index.css con respecto a index.html-->
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
-    <title>Tortas</title>
+    <!--vinculo hoja de estilos(styleshet) con archivo html-->
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>Tortas el Gocho</title>
 </head>
+<!--Fin head-->
 
 <body>
-    <h1>titulo 1</h1>
-    <p>Lorem ipsum, dolor</p>
-    <ul>
-        <li>punto 1</li>
-        <li>punto 2</li>
-        <li>punto 3</li>
-    </ul>
+    <!--Inicio header-->
+    <!-- Image and text -->
+    <nav class="navbar navbar-light bg-primary">
+        <a class="navbar-brand" href="#">
+            <img src="/resources/images/logo.png" class="d-inline-block align-top"> Tortas y Panes Mérida</a>
+        <a>Coberturas y horarios</a>
+        <a>Contacto</a>
+        <a>Teléfonos y Domicilios</a>
+        <a href="https://pay.google.com/about/"><img src="resources/images/carrito1.png" class="d-inline-block align-top" width="30" height="30" title="Carrito de compras"></a>
+        </a>
+    </nav>
+    <!--Fin header-->
+    <!--Inicio main-->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <b>TORTAS</b>
+            </div>
+            <div class="col-sm">
+                <b>PAN DULCE</b>
+            </div>
+            <div class="col-sm">
+                <b>PAN SALADO</b>
+            </div>
+        </div>
+    </div>
+    <!-- Inicio Media -->
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="/resources/images/brownie.png" class="card-img-top" alt="img1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, suspendisse auctor aptent imperdiet quam aliquam taciti, dui phasellus pretium praesent integer .</p>
+                </div>
+                <div class="col-sm">
+                    <img src="/resources/images/chocolate.png" class="card-img-top" alt="img2">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, suspendisse auctor aptent imperdiet quam aliquam taciti, dui phasellus pretium praesent integer .</p>
+                </div>
+                <div class="col-sm">
+                    <img src="/resources/images/fiesta.png" class="card-img-top" alt="img3">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, suspendisse auctor aptent imperdiet quam aliquam taciti, dui phasellus pretium praesent integer .</p>
+                </div>
+                <div class="col-sm">
+                    <img src="/resources/images/trozos.png" class="card-img-top" alt="img4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, suspendisse auctor aptent imperdiet quam aliquam taciti, dui phasellus pretium praesent integer .</p>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-sm">
+                    <img src="/resources/images/brownie.png" class="card-img-top" alt="img1">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, suspendisse auctor aptent imperdiet quam aliquam taciti, dui phasellus pretium praesent integer .</p>
+                </div>
+                <div class="col-sm">
+                    <img src="/resources/images/chocolate.png" class="card-img-top" alt="img2">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, suspendisse auctor aptent imperdiet quam aliquam taciti, dui phasellus pretium praesent integer .</p>
+                </div>
+                <div class="col-sm">
+                    <img src="/resources/images/fiesta.png" class="card-img-top" alt="img3">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, suspendisse auctor aptent imperdiet quam aliquam taciti, dui phasellus pretium praesent integer .</p>
+                </div>
+                <div class="col-sm">
+                    <img src="/resources/images/trozos.png" class="card-img-top" alt="img4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, suspendisse auctor aptent imperdiet quam aliquam taciti, dui phasellus pretium praesent integer .</p>
+                </div>
+            </div>
+        </div>
+    </main><br>
+    <!-- fin MEDIA heading -->
+
     <p>Uno de los buscadores mas famosos:
         <a href="https://www.google.com/" target="_blank">Google</a></p>
+    <!--Fin main-->
+    <!--inicio footer-->
+    <footer class="container">
+        <p class="float-right">
+            <a href="#">Volver arriba</a>
+        </p>
+        <p>"2019, Tortas y Panes Mérida, S.A.S"
+            <a href="#">Términos</a> °
+            <a href="#">Privacidad</a>
+        </p>
+    </footer>
+    <!--Fin footer->
+
+<!--Script para uso de JS-->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
